@@ -18,4 +18,32 @@ jQuery( function ( $ ) {
 				$el.removeClass( 'vectorMenuFocus' );
 			} );
 	} );
+
+	/**
+	 * Collapsible tabs for Vector
+	 */
+	var $cactions = $( '#p-cactions' );
+
+	// Bind callback functions to animate our drop down menu in and out
+	// and then call the collapsibleTabs function on the menu
+	$( '#p-views ul' )
+		.bind( 'beforeTabCollapse', function () {
+			// If the dropdown was hidden, show it
+			if ( $cactions.hasClass( 'emptyPortlet' ) ) {
+				$cactions
+					.removeClass( 'emptyPortlet' )
+					.find( 'h3, h5' )
+						.css( 'width', '1px' ).animate( { 'width': '24px' }, 390 );
+			}
+		} )
+		.bind( 'beforeTabExpand', function () {
+			// If we're removing the last child node right now, hide the dropdown
+			if ( $cactions.find( 'li' ).length === 1 ) {
+				$cactions.find( 'h3, h5' ).animate( { 'width': '1px' }, 390, function () {
+					$( this ).attr( 'style', '' )
+						.parent().addClass( 'emptyPortlet' );
+				});
+			}
+		} )
+		.collapsibleTabs();
 } );
